--- a/app/src/main/res/layout/pop_main_action_more.xml
+++ b/app/src/main/res/layout/pop_main_action_more.xml
@@ -17,8 +17,8 @@
         android:gravity="center_vertical"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:text="@string/popup_more_new_folder"
-        android:textColor="#5A5A5A"
+        android:text="@string/popup_action_bar_more_new_folder"
+        android:textColor="@color/popup_window_item_text_color"
         android:textSize="14dp" />
 
     <TextView
@@ -28,8 +28,8 @@
         android:gravity="center_vertical"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:text="@string/popup_more_sort_by"
-        android:textColor="#5A5A5A"
+        android:text="@string/popup_action_bar_more_sort_by"
+        android:textColor="@color/popup_window_item_text_color"
         android:textSize="14dp" />
 
 </LinearLayout>
