--- a/app/src/main/res/layout/item_music_group.xml
+++ b/app/src/main/res/layout/item_music_group.xml
@@ -23,9 +23,12 @@
         android:id="@+id/iv_music_group_item_select"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
         android:gravity="center_vertical"
-        android:src="@drawable/ic_drawer_feedback" />
+        android:src="@drawable/choose_none"
+        android:layout_marginRight="20dp"
+        android:layout_marginEnd="20dp"
+        android:padding="10dp"
+        />
 
 
 </LinearLayout>
