--- a/app/src/main/res/layout/view_search_bar.xml
+++ b/app/src/main/res/layout/view_search_bar.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="48dp"
+    android:layout_height="50dp"
     tools:background="@color/colorAccent"
     android:orientation="vertical">
 
@@ -12,11 +12,32 @@
         android:layout_centerVertical="true"
         android:orientation="horizontal">
 
+        <ImageView
+            android:id="@+id/view_search_bar_back"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="16dp"
+            android:src="@drawable/common_white_back"/>
+
+
+        <ImageView
+            android:id="@+id/view_search_bar_search"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:visibility="visible"
+            android:layout_marginLeft="16dp"
+            android:layout_gravity="center_vertical"
+            android:layout_toLeftOf="@id/common_applock_bar_layout_setting"
+            android:src="@drawable/ic_action_bar_search"
+            tools:ignore="ContentDescription" />
+
         <EditText
             android:id="@+id/view_search_bar_edit"
             android:layout_width="0dp"
             android:layout_height="36dp"
             android:layout_weight="1"
+            android:layout_marginLeft="4dp"
             android:background="@android:color/transparent"
             android:focusable="true"
             android:textCursorDrawable="@null"
@@ -25,18 +46,9 @@
             android:inputType="textNoSuggestions"
             android:maxLines="1"
             android:gravity="left|center_vertical"
-            android:paddingLeft="26dp"
-            android:textSize="13dp"
+            android:textSize="@dimen/h3_16"
             android:textColor="#ffffff"
             android:src="@drawable/ic_about_logo" />
-
-        <ImageView
-            android:id="@+id/view_search_bar_search"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/ic_about_logo"
-            tools:ignore="ContentDescription" />
 
     </LinearLayout>
 
@@ -44,8 +56,8 @@
         android:id="@+id/view_search_bar_bottom_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="42dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginTop="47dp"
+        android:layout_marginLeft="52dp"
         android:background="@android:color/white" />
 
 </RelativeLayout>
