--- a/app/src/main/res/layout/view_useage_permisstion_layout.xml
+++ b/app/src/main/res/layout/view_useage_permisstion_layout.xml
@@ -1,115 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#f2f2f2"
-    android:orientation="vertical">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:background="#44D6C3">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="67dp"
+        android:layout_marginTop="70dp"
+        android:gravity="center_horizontal"
         android:text="@string/applock_pre_header_last_step_text1"
-        android:textColor="#97aab9"
-        android:textSize="16dp" />
+        android:textColor="@color/white"
+        android:textSize="@dimen/h1_20"
+        android:textStyle="bold"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:gravity="center_horizontal"
+        android:text="@string/applock_pre_header_last_step_text2"
+        android:textColor="@color/white"
+        android:textSize="@dimen/h3_16"/>
 
-        <LinearLayout
-            android:layout_width="314dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="62dp"
-            android:background="#8aa6bc"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="8dp"
-                android:src="@mipmap/ic_launcher" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="12dp"
-                android:layout_weight="1"
-                android:text="@string/app_name"
-                android:textColor="#ffffff"
-                android:textSize="16dp" />
-
-            <ImageView
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginRight="8dp"
-                android:src="@drawable/ic_about_logo" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="314dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center_horizontal"
-            android:background="#ffffff"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="8dp"
-                android:layout_weight="1"
-                android:text="@string/applock_pre_header_last_step_text3"
-                android:textColor="#219eff"
-                android:textSize="12dp" />
-
-            <com.jb.filemanager.ui.widget.SlideButton
-                android:layout_width="40dp"
-                android:layout_height="20dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginRight="8dp"
-                app:default_checked="true" />
-
-        </LinearLayout>
+    <RelativeLayout
+        android:layout_width="325dp"
+        android:layout_height="138dp"
+        android:layout_marginTop="40dp"
+        android:layout_gravity="center_horizontal">
 
         <ImageView
-            android:layout_width="39.7dp"
-            android:layout_height="53dp"
-            android:layout_gravity="right"
-            android:layout_marginRight="28dp"
-            android:src="@drawable/ic_about_logo"
-            android:translationY="-25dp" />
-
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="57dp"
-            android:gravity="center"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/applock_pre_header_last_step_text2"
-            android:textColor="#219eff"
-            android:textSize="16dp" />
+            android:src="@drawable/permission_request_tip_img"/>
 
-    </LinearLayout>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:src="@drawable/permission_request_finger"/>
+
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/view_usage_permisstion_layout_ok"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_gravity="bottom"
-        android:layout_alignParentBottom="true"
-        android:background="#f5f5f5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:gravity="center"
-        android:text="@string/applock_common_ok"
-        android:textColor="#0083ff"
-        android:textSize="14sp"/>
+        android:layout_marginTop="32dp"
+        android:text="@string/common_continue"
+        android:textColor="@color/white"
+        android:drawableTop="@drawable/applock_lock_continue_icon"
+        android:drawablePadding="24dp"
+        android:textSize="@dimen/h3_16"/>
 </LinearLayout>
