--- a/app/src/main/res/layout/item_clean_trash_child_child.xml
+++ b/app/src/main/res/layout/item_clean_trash_child_child.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_height="50dp"
                 android:id="@+id/item_child_child_root"
-                android:background="#e8e8e8"
-                android:minHeight="60dp">
+                android:background="#FFF5F6FF"
+                android:minHeight="50dp">
 
     <ImageView
         android:id="@+id/item_child_child_iv"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="28dp"
+        android:src="@color/black"
+        android:layout_height="28dp"
         android:layout_centerVertical="true"
         android:layout_marginLeft="30dp"
         android:contentDescription="@null"/>
@@ -18,41 +19,35 @@
         android:id="@+id/item_child_child_name"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="70dp"
-        android:textColor="#666666"
+        android:layout_marginTop="11dp"
+        android:layout_marginLeft="68dp"
+        android:textColor="@color/black_70"
         android:ellipsize="middle"
         android:ems="10"
+        android:text="aaaa"
         android:singleLine="true"
-        android:textSize="16dp"/>
-
-    <com.jb.filemanager.function.trash.adapter.ItemCheckBox
-        android:id="@+id/item_child_child_select_button"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:contentDescription="@null"
-        android:padding="18dp"
-        android:src="@drawable/choose_part"/>
-
-    <TextView
-        android:id="@+id/item_child_child_size_unit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:textColor="#999999"
-        android:layout_marginRight="50dp"
         android:textSize="12dp"/>
 
     <TextView
         android:id="@+id/item_child_child_size"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@id/item_child_child_size_unit"
-        android:layout_centerVertical="true"
         android:layout_marginRight="4dp"
-        android:textColor="#666666"
-        android:textSize="16dp"/>
+        android:textColor="@color/black_40"
+        android:text="aaaa"
+        android:layout_marginTop="27dp"
+        android:layout_marginLeft="68dp"
+        android:textSize="10dp"/>
+
+
+    <com.jb.filemanager.function.trash.adapter.ItemCheckBox
+        android:id="@+id/item_child_child_select_button"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:contentDescription="@null"
+        android:paddingRight="12dp"
+        android:paddingLeft="22dp"
+        android:src="@drawable/select_multi"/>
 </RelativeLayout>
