--- a/app/src/main/res/layout/item_clean_trash_group.xml
+++ b/app/src/main/res/layout/item_clean_trash_group.xml
@@ -23,7 +23,7 @@
             android:layout_gravity="center"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            android:textColor="@color/black"
+            android:textColor="@color/black_70"
             android:textSize="12dp"
             tools:text="Big Files"/>
 
