--- a/app/src/main/res/layout/dialog_delete_confirm.xml
+++ b/app/src/main/res/layout/dialog_delete_confirm.xml
@@ -8,43 +8,48 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/tv_create_folder_title"
+        android:id="@+id/tv_delete_confirm_title"
         android:layout_width="match_parent"
         android:layout_height="24dp"
         android:layout_gravity="start"
         android:layout_marginTop="21dp"
+        android:layout_marginBottom="14dp"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
         android:textColor="#000000"
         android:textSize="20dp"
         android:textStyle="bold"
-        android:text="@string/dialog_create_new_folder_title"/>
+        android:text="@string/dialog_delete_confirm_title"/>
 
     <TextView
-        android:id="@+id/tv_create_folder_error_tips"
+        android:id="@+id/tv_delete_confirm_danger_tips"
         android:layout_width="match_parent"
         android:layout_height="24dp"
         android:layout_gravity="start"
-        android:layout_marginTop="21dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
-        android:background="#FF8181"
-        android:textColor="#FFFFFF"
-        android:textSize="12dp"
-        android:visibility="gone"/>
-
-    <EditText
-        android:id="@+id/et_main_create_folder_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
+        android:paddingRight="8dp"
+        android:paddingLeft="8dp"
+        android:background="#FF8181"
+        android:textColor="#FFFFFF"
+        android:textSize="12dp"
+        android:text="@string/dialog_delete_confirm_danger_tips"
+        android:visibility="visible"/>
+
+    <TextView
+        android:id="@+id/tv_delete_confirm_desc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:hint="@string/dialog_create_new_folder_hint"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:hint="@string/dialog_delete_confirm_desc"
         android:textColor="#000000"
-        android:textSize="14dp"
-        android:inputType="text" />
+        android:textSize="14dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -59,7 +64,7 @@
             android:layout_weight="1"/>
 
         <TextView
-            android:id="@+id/tv_main_create_folder_cancel"
+            android:id="@+id/tv_delete_confirm_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp"
@@ -76,7 +81,7 @@
             android:text="@string/common_cancel"/>
 
         <TextView
-            android:id="@+id/tv_main_create_folder_confirm"
+            android:id="@+id/tv_delete_confirm_ok"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp"
