--- a/app/src/main/res/layout/dialog_delete_confirm.xml
+++ b/app/src/main/res/layout/dialog_delete_confirm.xml
@@ -37,7 +37,7 @@
         android:textColor="#FFFFFF"
         android:textSize="12dp"
         android:text="@string/dialog_delete_confirm_danger_tips"
-        android:visibility="visible"/>
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/tv_delete_confirm_desc"
