--- a/app/src/main/res/layout/dialog_delete_confirm.xml
+++ b/app/src/main/res/layout/dialog_delete_confirm.xml
@@ -24,7 +24,7 @@
     <TextView
         android:id="@+id/tv_delete_confirm_danger_tips"
         android:layout_width="match_parent"
-        android:layout_height="24dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="24dp"
