--- a/app/src/main/res/layout/fragment_main_category.xml
+++ b/app/src/main/res/layout/fragment_main_category.xml
@@ -208,6 +208,8 @@
         android:layout_marginRight="9dp"
         android:textStyle="bold"
         android:textSize="16dp"
+        android:text="Clean"
+        android:gravity="center"
         android:textColor="#FFFFFF"
         android:background="#39BDAC"/>
 
