--- a/app/src/main/res/layout/item_clean_trash_group.xml
+++ b/app/src/main/res/layout/item_clean_trash_group.xml
@@ -68,6 +68,7 @@
     </LinearLayout>
 
     <View
+        android:id="@+id/v_group_divider_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/list_divider_line_color_e7e9f3"/>
