add applock list ui

--- a/app/src/main/res/layout/item_applock_float_view.xml
+++ b/app/src/main/res/layout/item_applock_float_view.xml
@@ -38,8 +38,7 @@
             android:layout_height="50dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:padding="17dp"
-            android:src="@drawable/choose_all"/>
+            android:padding="16dp"/>
 
     </RelativeLayout>
 
