--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,6 +31,11 @@
         <item name="android:windowIsTranslucent">false</item>
     </style>
 
+    <!--剔除window背景的主题  适用于页面设置了背景色的情况-->
+    <style name="AppTheme.NoActionBar_TranslucentBar_without_bg_no_anim" parent="AppTheme.NoActionBar_TranslucentBar_without_bg">
+        <item name="android:windowAnimationStyle">@null</item>
+    </style>
+
     <!--带有window背景的主题 透明背景-->
     <style name="AppTheme.NoActionBar_TranslucentBar_with_transparent_bg" parent="Pop.Activity.Theme">
 
