--- a/app/src/main/res/layout/dialog_sub_folder_paste.xml
+++ b/app/src/main/res/layout/dialog_sub_folder_paste.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/tv_duplicate_file_title"
+        android:id="@+id/tv_sub_folder_paste_title"
         android:layout_width="match_parent"
         android:layout_height="24dp"
         android:layout_gravity="start"
@@ -18,10 +18,10 @@
         android:textColor="#000000"
         android:textSize="20dp"
         android:textStyle="bold"
-        android:text="@string/dialog_duplicate_file_title"/>
+        android:text="@string/dialog_sub_folder_paste_title"/>
 
     <TextView
-        android:id="@+id/tv_duplicate_file_desc"
+        android:id="@+id/tv_sub_folder_paste_desc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
@@ -30,35 +30,22 @@
         android:layout_marginRight="24dp"
         android:textColor="#000000"
         android:textSize="16dp"
-        android:text="@string/dialog_duplicate_file_desc"/>
+        android:text="@string/dialog_sub_folder_paste_desc"/>
 
     <TextView
-        android:id="@+id/tv_duplicate_file_src"
+        android:id="@+id/tv_sub_folder_paste_src"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
+        android:gravity="start|center_vertical"
         android:layout_marginTop="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
         android:drawablePadding="16dp"
+        android:drawableLeft="@drawable/img_folder"
+        android:drawableStart="@drawable/img_folder"
         android:textColor="#000000"
         android:textSize="14dp"/>
-
-    <TextView
-        android:id="@+id/tv_duplicate_file_apply_to_all"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
-        android:drawablePadding="10dp"
-        android:drawableLeft="@drawable/ic_duplicate_file_apply_to_all"
-        android:drawableStart="@drawable/ic_duplicate_file_apply_to_all"
-        android:textColor="#000000"
-        android:textSize="12dp"
-        android:text="@string/dialog_duplicate_file_apply_to_all"
-        android:visibility="visible"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -73,7 +60,7 @@
             android:layout_weight="1"/>
 
         <TextView
-            android:id="@+id/tv_duplicate_file_cancel"
+            android:id="@+id/tv_sub_folder_paste_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp"
@@ -90,7 +77,7 @@
             android:text="@string/common_cancel"/>
 
         <TextView
-            android:id="@+id/tv_duplicate_file_confirm"
+            android:id="@+id/tv_sub_folder_paste_confirm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp"
@@ -104,7 +91,7 @@
             android:textColor="@color/dialog_confirm_color"
             android:textSize="16dp"
             android:textStyle="bold"
-            android:text="@string/common_ok"/>
+            android:text="@string/common_skip"/>
 
     </LinearLayout>
 
